--- a/index.html
+++ b/index.html
@@ -53,14 +53,12 @@
       <h2>お問い合わせ</h2>
       <form>
         <label>会社名<input type="text" /></label>
-      </form>
-      <form>
-        <label>お名前<input type="text" /></label>
-      </form>
-      <form>
-        <label>メールアドレス<input type="email" /></label>
-      </form>
-      <form>
+        <div>
+          <label>お名前<input type="text" /></label>
+        </div>
+        <div>
+          <label>メールアドレス<input type="email" /></label>
+        </div>
         <label
           >お問い合わせ内容<textarea
             name="textarea"
@@ -68,8 +66,6 @@
             rows="10"
           ></textarea>
         </label>
-      </form>
-      <form>
         <input type="submit" value="お申し込み" />
       </form>
       <small>&copy; 2020 TECH inc.</small>
